# rust_cargo_program

./: Cargo.toml  cargo-generate.toml  meson.build  readme.md
.github/: cargo_wrapper.py  cargo_wrapper.sh
.github/workflows/: codeql_analysis.yml  host_system_builder.yml  linux_host_users.yml  macos_host_users.yml
code/: main.rs  meson.build  program.rs
src/: bot.rs  lib.rs  main.rs
test/: meson.build  test_cases.rs
tests/: test_cases.rust
