[package]
name = "prog"
version = "0.1.0"
authors = ["Michael <michaelbrockus@gmail.com>"]
edition = "2018"
readme = "readme.md"
license = "Apache-2.0"
repository = "https://github.com/dragon-apps/rust_cargo_program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10.4"
tokio = {version = "1.4.0", features = ["full"]}
